--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/Users/shanzil/Desktop/projects/codecademy/flexbox-noeul-sikdang/ressources/img/logo-onglet-5.png">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/noeul/ressources/styles.css">
-    <title>Roxane Maury</title>
+    <title>Noeul Sikdang</title>
   </head>
 
   <body>
@@ -64,7 +64,7 @@
             <p>Pork & Rice Soup</p>
           </div>
           <div class="best-3">
-            <img src="/noeulressources/img/pork-cutlet.jpeg" alt="">
+            <img src="/noeul/ressources/img/pork-cutlet.jpeg" alt="">
             <p class="korean">돈가스</p>
             <p>Pork Cutlet</p>
           </div>
